# inert-api

./: .env.example  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: deploy.yml
scripts/: deploy.sh  inert-api.service  nginx-inert.conf  setup-server.sh
src/: db.rs  main.rs  models.rs
src/auth/: authorization.rs  google.rs  jwt.rs  mod.rs
src/middlewares/: auth_middleware.rs
src/routes/: create_still.rs  delete_still.rs  get_feed.rs  get_feed_json.rs  get_feed_rss.rs  get_mine.rs  get_still.rs  get_user_profile.rs  get_user_stills.rs  login.rs  login_google.rs  me.rs  mod.rs  signup.rs  update_me.rs  upload_image.rs
